target/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Var: '", "'int_of_float'", "'float_to_int'", 
                     "'int_of_string'", "'string_of_int'", "'float_to_string'", 
                     "'string_of_float'", "'bool_of_string'", "'string_of_bool'", 
                     "<INVALID>", "'Body'", "'Else'", "'Endfor'", "'If'", 
                     "'Var'", "'EndDo'", "'Break'", "'ElseIf'", "'EndWhile'", 
                     "'Parameter'", "'While'", "'Continue'", "'EndBody'", 
                     "'For'", "'Return'", "'True'", "'Do'", "'EndIf'", "'Function'", 
                     "'Then'", "'False'", "<INVALID>", "'='", "'+'", "'+.'", 
                     "'-'", "'-.'", "'*'", "'*.'", "'\\'", "'\\.'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "'.'", 
                     "','", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "BODY", "ELSE", "ENDFOR", 
                      "IF", "VAR", "ENDDO", "BREAK", "ELSEIF", "ENDWHILE", 
                      "PARAMETER", "WHILE", "CONTINUE", "ENDBODY", "FOR", 
                      "RETURN", "TRUE", "DO", "ENDIF", "FUNCTION", "THEN", 
                      "FALSE", "KEYWORDS", "ASSIGN", "ADD", "ADD_FLOAT", 
                      "SUB", "SUB_FLOAT", "MUL", "MUL_FLOAT", "DIVISION", 
                      "DIVISION_FLOAT", "MOD", "NEGATIVE", "AND", "OR", 
                      "EQUAL", "IS_NOT_EQUAL", "LESS", "MORE_THAN", "LESS_OR_EQUAL", 
                      "MORE_OR_EQUAL", "NOT_EQUAL_FLOAT", "LESS_FLOAT", 
                      "MORE_FLOAT", "LESS_OR_EQUAL_FLOAT", "MORE_OR_EQUAL_FLOAT", 
                      "LEFT_ROUND_BRACKET", "RIGHT_ROUND_BRACKET", "LEFT_SQUARE_BRACKET", 
                      "RIGHT_SQUARE_BRACKET", "LEFT_CURLY_BRACKET", "RIGHT_CURLY_BRACKET", 
                      "COLON", "DOT", "COMMA", "INTEGER", "FLOAT", "BOOLEAN", 
                      "STRING", "ARRAY", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "SEMI", "WS", "BLOCK_COMMENT", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_var_list = 2
    RULE_many_var = 3
    RULE_function_list = 4
    RULE_function_name = 5
    RULE_function_body = 6
    RULE_param = 7
    RULE_many_param = 8
    RULE_one_param = 9
    RULE_id_list = 10
    RULE_statement = 11
    RULE_primitive_type = 12
    RULE_array_type = 13
    RULE_value = 14
    RULE_integer_arithmetic_type = 15
    RULE_integer_relation_type = 16
    RULE_float_arithmetic_type = 17
    RULE_float_relation_type = 18
    RULE_bool_type = 19
    RULE_function_call = 20
    RULE_array_index = 21
    RULE_index = 22
    RULE_assign = 23
    RULE_if_statement = 24
    RULE_for_statement = 25
    RULE_white_statement = 26
    RULE_do_white_statement = 27
    RULE_break_statement = 28
    RULE_continue_statement = 29
    RULE_call_statement = 30
    RULE_return_statement = 31
    RULE_exp = 32
    RULE_exp1 = 33
    RULE_exp2 = 34
    RULE_exp3 = 35
    RULE_exp5 = 36
    RULE_exp6 = 37
    RULE_exp7 = 38
    RULE_exp8 = 39
    RULE_exp9 = 40
    RULE_int_of_float = 41
    RULE_float_to_int = 42
    RULE_int_of_string = 43
    RULE_string_of_int = 44
    RULE_float_to_string = 45
    RULE_string_of_float = 46
    RULE_bool_of_string = 47
    RULE_string_of_bool = 48

    ruleNames =  [ "program", "declaration", "var_list", "many_var", "function_list", 
                   "function_name", "function_body", "param", "many_param", 
                   "one_param", "id_list", "statement", "primitive_type", 
                   "array_type", "value", "integer_arithmetic_type", "integer_relation_type", 
                   "float_arithmetic_type", "float_relation_type", "bool_type", 
                   "function_call", "array_index", "index", "assign", "if_statement", 
                   "for_statement", "white_statement", "do_white_statement", 
                   "break_statement", "continue_statement", "call_statement", 
                   "return_statement", "exp", "exp1", "exp2", "exp3", "exp5", 
                   "exp6", "exp7", "exp8", "exp9", "int_of_float", "float_to_int", 
                   "int_of_string", "string_of_int", "float_to_string", 
                   "string_of_float", "bool_of_string", "string_of_bool" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    ID=10
    BODY=11
    ELSE=12
    ENDFOR=13
    IF=14
    VAR=15
    ENDDO=16
    BREAK=17
    ELSEIF=18
    ENDWHILE=19
    PARAMETER=20
    WHILE=21
    CONTINUE=22
    ENDBODY=23
    FOR=24
    RETURN=25
    TRUE=26
    DO=27
    ENDIF=28
    FUNCTION=29
    THEN=30
    FALSE=31
    KEYWORDS=32
    ASSIGN=33
    ADD=34
    ADD_FLOAT=35
    SUB=36
    SUB_FLOAT=37
    MUL=38
    MUL_FLOAT=39
    DIVISION=40
    DIVISION_FLOAT=41
    MOD=42
    NEGATIVE=43
    AND=44
    OR=45
    EQUAL=46
    IS_NOT_EQUAL=47
    LESS=48
    MORE_THAN=49
    LESS_OR_EQUAL=50
    MORE_OR_EQUAL=51
    NOT_EQUAL_FLOAT=52
    LESS_FLOAT=53
    MORE_FLOAT=54
    LESS_OR_EQUAL_FLOAT=55
    MORE_OR_EQUAL_FLOAT=56
    LEFT_ROUND_BRACKET=57
    RIGHT_ROUND_BRACKET=58
    LEFT_SQUARE_BRACKET=59
    RIGHT_SQUARE_BRACKET=60
    LEFT_CURLY_BRACKET=61
    RIGHT_CURLY_BRACKET=62
    COLON=63
    DOT=64
    COMMA=65
    INTEGER=66
    FLOAT=67
    BOOLEAN=68
    STRING=69
    ARRAY=70
    UNCLOSE_STRING=71
    ILLEGAL_ESCAPE=72
    SEMI=73
    WS=74
    BLOCK_COMMENT=75
    UNTERMINATED_COMMENT=76
    ERROR_CHAR=77

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(BKITParser.DeclarationContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.declaration()
            self.state = 99
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_listContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_listContext,i)


        def function_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Function_listContext)
            else:
                return self.getTypedRuleContext(BKITParser.Function_listContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = BKITParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.T__0:
                self.state = 101
                self.var_list()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 107
                self.function_list()
                self.state = 110 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.FUNCTION):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_var(self):
            return self.getTypedRuleContext(BKITParser.Many_varContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_list" ):
                return visitor.visitVar_list(self)
            else:
                return visitor.visitChildren(self)




    def var_list(self):

        localctx = BKITParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(BKITParser.T__0)
            self.state = 113
            self.many_var()
            self.state = 114
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(BKITParser.Id_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_var" ):
                return visitor.visitMany_var(self)
            else:
                return visitor.visitChildren(self)




    def many_var(self):

        localctx = BKITParser.Many_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_many_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.id_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def function_name(self):
            return self.getTypedRuleContext(BKITParser.Function_nameContext,0)


        def function_body(self):
            return self.getTypedRuleContext(BKITParser.Function_bodyContext,0)


        def param(self):
            return self.getTypedRuleContext(BKITParser.ParamContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_function_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_list" ):
                return visitor.visitFunction_list(self)
            else:
                return visitor.visitChildren(self)




    def function_list(self):

        localctx = BKITParser.Function_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(BKITParser.FUNCTION)
            self.state = 119
            self.match(BKITParser.COLON)
            self.state = 120
            self.function_name()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 121
                self.param()


            self.state = 124
            self.function_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_function_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_name" ):
                return visitor.visitFunction_name(self)
            else:
                return visitor.visitChildren(self)




    def function_name(self):

        localctx = BKITParser.Function_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def var_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_listContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_listContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StatementContext)
            else:
                return self.getTypedRuleContext(BKITParser.StatementContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_function_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_body" ):
                return visitor.visitFunction_body(self)
            else:
                return visitor.visitChildren(self)




    def function_body(self):

        localctx = BKITParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(BKITParser.BODY)
            self.state = 129
            self.match(BKITParser.COLON)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.T__0:
                self.state = 130
                self.var_list()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.ID) | (1 << BKITParser.IF) | (1 << BKITParser.BREAK) | (1 << BKITParser.WHILE) | (1 << BKITParser.CONTINUE) | (1 << BKITParser.FOR) | (1 << BKITParser.RETURN) | (1 << BKITParser.DO))) != 0):
                self.state = 136
                self.statement()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(BKITParser.ENDBODY)
            self.state = 143
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def one_param(self):
            return self.getTypedRuleContext(BKITParser.One_paramContext,0)


        def many_param(self):
            return self.getTypedRuleContext(BKITParser.Many_paramContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = BKITParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(BKITParser.PARAMETER)
            self.state = 146
            self.match(BKITParser.COLON)
            self.state = 147
            self.one_param()
            self.state = 148
            self.many_param()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_paramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def one_param(self):
            return self.getTypedRuleContext(BKITParser.One_paramContext,0)


        def many_param(self):
            return self.getTypedRuleContext(BKITParser.Many_paramContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_param" ):
                return visitor.visitMany_param(self)
            else:
                return visitor.visitChildren(self)




    def many_param(self):

        localctx = BKITParser.Many_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_many_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.COMMA:
                self.state = 150
                self.match(BKITParser.COMMA)
                self.state = 151
                self.one_param()
                self.state = 152
                self.many_param()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class One_paramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(BKITParser.Id_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_one_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOne_param" ):
                return visitor.visitOne_param(self)
            else:
                return visitor.visitChildren(self)




    def one_param(self):

        localctx = BKITParser.One_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_one_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.id_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ID)
            else:
                return self.getToken(BKITParser.ID, i)

        def array_index(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Array_indexContext)
            else:
                return self.getTypedRuleContext(BKITParser.Array_indexContext,i)


        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ASSIGN)
            else:
                return self.getToken(BKITParser.ASSIGN, i)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExpContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExpContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_id_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):
